<?xml version="1.0"?>
<package format="3">
  <name>delphi_esr_driver</name>
  <version>1.0.1</version>
  <description>The can driver package</description>
  <maintainer email="support@torcrobotics.com">Torc Robotics</maintainer>
  <license>BSD</license>
  <author email="watters@torc.ai">Thomas Watters</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>cav_driver_utils</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>cav_driver_utils</exec_depend>
  <build_depend>carma_cmake_common</build_depend>
</package>
